# wildberries-api-client

./: README.md  entrypoint.sh  pyproject.toml
wildberries_api_client/: __init__.py  _api_client.py  _configuration.py  setup.py
wildberries_api_client/_swagger_doc/: swagger_analytics.yaml  swagger_content.yaml  swagger_feedbacks_questions.yaml  swagger_marketplace.yaml  swagger_prices.yaml  swagger_promotion.yaml  swagger_recommendations.yaml  swagger_statistics.yaml  swagger_tariffs.yaml  transliterate_script.py
wildberries_api_client/analytics/: __init__.py  api_client.py  configuration.py  rest.py
wildberries_api_client/analytics/api/: __init__.py  othety_pouderhaniam_api.py  platnoe_hranenie_api.py  tovary_sobazatelnoi_markirovkoi_api.py  voronka_prodah_api.py
wildberries_api_client/analytics/models/: __init__.py  error_response.py  (+67 more)
wildberries_api_client/content/: __init__.py  api_client.py  configuration.py  rest.py
wildberries_api_client/feedbacks_questions/: __init__.py  api_client.py  configuration.py  rest.py
wildberries_api_client/marketplace/: __init__.py  api_client.py  configuration.py  rest.py
wildberries_api_client/prices/: __init__.py  api_client.py  configuration.py  rest.py
wildberries_api_client/promotion/: __init__.py  api_client.py  configuration.py  rest.py
wildberries_api_client/recommendations/: __init__.py  api_client.py  configuration.py  rest.py
wildberries_api_client/statistics/: __init__.py  api_client.py  configuration.py  rest.py
wildberries_api_client/tariffs/: __init__.py  api_client.py  configuration.py  rest.py
(+510 files in other folders)
